tests/errors/test_08.x
// Invalid unary operator

fn main() -> void
{

    let x: i64 = !1;
    let haha: bool = -true;

	let hmm = ~19.0;

}
